node.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: myapp
    namespace: default
  spec:
    ingressClassName: nginx
    rules:
      - host: myapp.lan
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: myapp
                  port:
                    number: 80
